--- a/sections/3.tex
+++ b/sections/3.tex
@@ -1,6 +1,65 @@
 \documentclass[../main.tex]{subfiles}
 \begin{document}
 \begin{outline}
+	\1 Cells themselves are about 70-95\% water
+	\1 Water is 2 hydrogen atoms joined to oxygen by singles covalent
+	\1 Water is a polar covalent molecule
+	\1 Cohesion
+	\2 Hydrogen bonds are 1/20th as strong as covalent
+	\3 Only last a few trillionths of a second
+	\2 Hydrogen bonds hold the substance together
+	\2 \hl{contributes to transport of water and nutrients against gravity in plants}
+	\1 Adhesion
+	\2 Hydrogen bonds cause water molecules leaving to tug on molecules fartherdown
+	\2 Helps counter the downward pull of gravity
+	\1 Surface tension --- meausre of how difficult it is to stretch or break the surface of a liquid
+	\2 Water has a greater surface tension than most liquids
+	\1 Absorbs heat from warmer air and releases heat to air thats colder
+	\2 slightly change its own temperature
+	\1 Heat --- measure of the total amount of kinetic energy due to molecular motion
+	\1 Temperature --- intensity of heat due to average kinetic energy of molecules
+	\1 Calorie --- amount of heat it akes to raise the temperature of 1g of water by 1C
+	\2 also amount of heat that 1g releases when it cools by 1C
+	\1 Kilocalorie, 1000 cal, is quantity of heat required to heat 1kg of water by 1C
+	\1 Joule = 0.239cal, Cal = 4.184J
+	\1 Specific heat --- amount of heat that must be absorbed or lost for 1g to change its temp by 1C
+	\2 Specific heat of water = 1/cal/g/C
+	\1 Water has high specifc heat bc most of heat is used to disrupt bonds before the water moves faster
+	\2 When water temp drops, more hydrogen bonds form
+	\1 Heat of vaporization --- quantity of heat a liquid must absorb for 1g to convert into gas
+	\2 1g of water at 25C takes 580cal of heat to evaporate
+	\1 As liquid evaporates, surface cools down because molecules with most kinetic likely leave as gas
+	\1 Water expands when solidify
+	\2 caused by hydrogen bonds
+	\2 when frozen, molecules dont break their bonds
+	\2 stuck in crystalline lattice
+	\3 bonds partnered to 4 partners
+	\2 causes ice to become 10\% less dense
+	\1 Lowered density of ice causes it to float on water
+	\2 important because if ice sank, oceans would freeze solid
+	\2 insulates water below
+	\1 solution --- homogeneous mixture of two or more substances
+	\1 solvent --- dissolving agents of a solution
+	\1 solute --- substance being dissolved
+	\1 aqueous solution --- solution with water solvent
+	\1 mythical universal solvent --- something that would dissolve anything
+	\2 would dissolve the container
+	\1 Water solvent quality traced to \hl{polarity of water molecule}
+	\2 Salt placed in water causes oxygen to separate sodium and hydrogen to the chloride
+	\1 sphere of water molecules around dissolved ion is called a hydration shell
+	\1 compounds made of polar covalent bonds can dissolve in water
+	\2 compounds dissolve when water molecules surround each of the solute molecules
+	\1 hydrophillic --- substance with affinity for water
+	\2 some substances can by hydrophillic without dissolving bc large suize
+	\3 they remain suspended in aqueous liquid of the cell
+	\1 colloid --- stable suspension of fine particles in a liquid
+	\1 cotton doesn't dissolve in water because large molecules of cellulose --- compound with positive and negative polar bonds
+	\2 cellulose is also in walls of plant
+	\1 hydrophobic --- water repelling
+	\2 nonionic and nonpolar molecules repel water
+	\1 molecular mass --- sum of masses of all atoms in molecule
+	\1 molarity --- number of moles of solute per liter of solution
+	\2 unit of concentration most used by biologists for aqueous solutions
 
 \end{outline}
 \end{document}
